--- a/README.adoc
+++ b/README.adoc
@@ -4,4 +4,4 @@ This is a repository for discussing an idea tentatively titled Social Credit Rat
 
 "an always-on coach to help your daily economic decisions reflect both your social values and the realities of your life."
 
-The initial visioning and discussion is on the wiki, for ease of editing. 
+The initial visioning and discussion is on the https://github.com/CharlesTBetz/SocialCredit/wiki[wiki], for ease of editing. 
