--- a/README.adoc
+++ b/README.adoc
@@ -5,3 +5,7 @@ This is a repository for discussing an idea tentatively titled Social Credit Rat
 "an always-on coach to help your daily economic decisions reflect both your social values and the realities of your life."
 
 The initial visioning and discussion is on the https://github.com/CharlesTBetz/SocialCredit/wiki[wiki], for ease of editing. 
+
+== In a nutshell
+
+image::https://github.com/CharlesTBetz/SocialCredit/blob/master/img/SocCred.png[]
