--- a/README.adoc
+++ b/README.adoc
@@ -6,12 +6,10 @@ This is a repository for discussing an idea tentatively titled Social Credit Rat
 
 The initial visioning and discussion is on the https://github.com/CharlesTBetz/SocialCredit/wiki[wiki], for ease of editing. 
 
-== In a nutshell
-
-What doesn't work:
+== What doesn't work:
 
 image::https://github.com/CharlesTBetz/SocialCredit/blob/master/img/SocCred.png[]
 
-What could work:
+== What could work:
 
 image::https://github.com/CharlesTBetz/SocialCredit/blob/master/img/SocCred2.png[]
