--- a/README.adoc
+++ b/README.adoc
@@ -13,3 +13,6 @@ image::https://github.com/CharlesTBetz/SocialCredit/blob/master/img/SocCred.png[
 == What could work:
 
 image::https://github.com/CharlesTBetz/SocialCredit/blob/master/img/SocCred2.png[]
+
+Go to the https://github.com/CharlesTBetz/SocialCredit/wiki[wiki], for more information (currently 2 pages of writeup).
+
